# dlt-embeddings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cicd.yml
dlt_embeddings/: __init__.py  api.py  cli.py  db.py  dlt.yml  models.py  query.py
dlt_embeddings/.dlt/: config.local.toml  config.toml  secrets.toml.example
dlt_embeddings/pipelines/: __init__.py
dlt_embeddings/schemas/: __init__.py
dlt_embeddings/sources/: __init__.py  conversations_embeddings_source.py
dlt_embeddings/utils/: __init__.py  helpers.py
examples/: README.md  vector_search_example.py
frontend/: DEPLOYMENT.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: SearchBar.css  SearchBar.tsx  SearchResults.css  SearchResults.tsx  Stats.css  Stats.tsx
infrastructure/: README.md
infrastructure/cloudformation/: apprunner-template.yaml
infrastructure/docker/: Dockerfile.backend  README.md  docker-compose.yml
infrastructure/localstack/: docker-compose-localstack.yml  docker-compose-pgvector.yml  docker-compose.yml
infrastructure/sam/: template.yaml
test_data/: README.md  test_conversations_embeddings.py
tests/: __init__.py  conftest.py  test_conversations_source.py
typings/dlt/: __init__.pyi
typings/dlt/destinations/: __init__.pyi  sql_client.pyi
typings/dlt_plus/: __init__.pyi
