[project]
name = "dlt-embeddings"
version = "0.1.0"
description = "Data loading pipelines with embeddings support using dlt"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Data Science Team"}
]
dependencies = [
    "dlt[postgres]>=0.4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0",
    "sentence-transformers>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["test_data", ".venv", "venv", "__pycache__", ".git"]
# Disable dlt_plus_tests plugin as we don't need it for this project
addopts = "-p no:dlt_plus_tests"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
mypy_path = "typings"
follow_imports = "normal"
# Allow untyped calls and definitions for dlt decorators
disable_error_code = ["call-arg", "misc"]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "loguru.*",
    "rich.*",
    "redshift_connector.*",
    "mbake.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.uv]
